Fixes for HMR in Docker with WSL2 and environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,9 @@ tsconfig.tsbuildinfo
 
 # Netlify
 .netlify
+
+##### Ignore environment variables
+# Environment files
+.env
+.env.*
+!.env.example
