--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+	"deploy": "bun run build && gh-pages -d dist",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "^1.12.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.39",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
