Permissions for github pages deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,13 @@
 name: Deploy Qwik Site
 on:
   push:
-    branches: [ "githubpages" ]
+    branches: [ "main" ]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write    # <-- Key line to allow pushing to gh-pages
     steps:
       - uses: actions/checkout@v3
 
