--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy Qwik Site
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "githubpages" ]
 
 jobs:
   deploy:
@@ -25,4 +25,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          publish_branch: gh-pages
+          publish_branch: githubpages-deployed
