--- a/q-manifest.json
+++ b/q-manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifestHash": "h5iyl",
+  "manifestHash": "6gapub",
   "symbols": {
     "s_Ysfvd0zsHZc": {
       "origin": "../node_modules/@builder.io/qwik-city/lib/index.qwik.mjs",
@@ -116,7 +116,7 @@
       "captures": false,
       "loc": [
         92,
-        427
+        403
       ]
     },
     "s_X0lgn5dhhhc": {
@@ -129,7 +129,7 @@
       "captures": false,
       "loc": [
         90,
-        359
+        337
       ]
     },
     "s_p1yCGpFL1xE": {
@@ -337,31 +337,31 @@
     }
   },
   "mapping": {
-    "s_Ysfvd0zsHZc": "q-CN05Qi30.js",
+    "s_Ysfvd0zsHZc": "q-DNOsq1mW.js",
     "s_26Zk9LevwR4": "q-BNPJXT0q.js",
-    "s_0vphQYqOdZI": "q-B8HoOq0z.js",
-    "s_1raneLGffO8": "q-CP_5OE63.js",
+    "s_0vphQYqOdZI": "q-BKhI2EiG.js",
+    "s_1raneLGffO8": "q-XlU8824k.js",
     "s_B0lqk5IDDy4": "q-DcN4phJ_.js",
-    "s_MiPVFWJLcMo": "q-BNZ8nKLA.js",
-    "s_ScE8eseirUA": "q-DJ9gDR7K.js",
-    "s_VKFlAWJuVm8": "q-CyMFVI7-.js",
-    "s_WDwcpq0GviA": "q-BcqF-p8l.js",
-    "s_X0lgn5dhhhc": "q-BpDcAI1p.js",
-    "s_p1yCGpFL1xE": "q-DYNz6u9D.js",
-    "s_pWsmcogutG8": "q-DSQ96vaC.js",
-    "s_tntnak2DhJ8": "q-BR9jH5J7.js",
-    "s_K4gvalEGCME": "q-BpnE9-QD.js",
+    "s_MiPVFWJLcMo": "q-Djg4jmAc.js",
+    "s_ScE8eseirUA": "q-DTutFjjo.js",
+    "s_VKFlAWJuVm8": "q-QLbuarBa.js",
+    "s_WDwcpq0GviA": "q-HM7vuK-6.js",
+    "s_X0lgn5dhhhc": "q-DjmxJzL_.js",
+    "s_p1yCGpFL1xE": "q-CDH1NhkB.js",
+    "s_pWsmcogutG8": "q-DzX9OtiV.js",
+    "s_tntnak2DhJ8": "q-CMSiKgzL.js",
+    "s_K4gvalEGCME": "q-CFL_fbSx.js",
     "s_9KRx0IOCHt8": "q-F156cQaX.js",
     "s_A5SCimyrjAE": "q-lNDDqrzM.js",
     "s_N26RLdG0oBg": "q-B8dWvBzk.js",
-    "s_WfTOxT4IrdA": "q-D6ZuQ01Z.js",
-    "s_FdQ8zERN4uM": "q-B9sG-qSp.js",
-    "s_PmWjL2RrvZM": "q-BhPduiTD.js",
-    "s_aww2BzpANGM": "q-DOBGu2eg.js",
-    "s_qGVD1Sz413o": "q-Ckf0Lz1I.js",
-    "s_xe8duyQ5aaU": "q-Dpw-Mq__.js",
-    "s_zPJUEsxZLIA": "q-DRkMdYdO.js",
-    "s_zpHcJzYZ88E": "q-NgJJKfJB.js"
+    "s_WfTOxT4IrdA": "q-DcsI9TLi.js",
+    "s_FdQ8zERN4uM": "q-gt515s7g.js",
+    "s_PmWjL2RrvZM": "q-C3fgDybS.js",
+    "s_aww2BzpANGM": "q-DKUjv_k1.js",
+    "s_qGVD1Sz413o": "q-Dyij7OZr.js",
+    "s_xe8duyQ5aaU": "q-DnAzCboA.js",
+    "s_zPJUEsxZLIA": "q-cbp1tv96.js",
+    "s_zpHcJzYZ88E": "q-X-B1-cto.js"
   },
   "bundles": {
     "../service-worker.js": {
@@ -384,10 +384,10 @@
         "s_N26RLdG0oBg"
       ]
     },
-    "q-B8HoOq0z.js": {
+    "q-BKhI2EiG.js": {
       "size": 884,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "origins": [
@@ -395,58 +395,6 @@
       ],
       "symbols": [
         "s_0vphQYqOdZI"
-      ]
-    },
-    "q-B9sG-qSp.js": {
-      "size": 135,
-      "isTask": true,
-      "imports": [
-        "q-DRkMdYdO.js",
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_FdQ8zERN4uM"
-      ]
-    },
-    "q-BcqF-p8l.js": {
-      "size": 378,
-      "imports": [
-        "q-lNDDqrzM.js"
-      ],
-      "origins": [
-        "src/components/background-window/background-window.tsx_BackgroundWindow_component_WDwcpq0GviA.js"
-      ],
-      "symbols": [
-        "s_WDwcpq0GviA"
-      ]
-    },
-    "q-BhPduiTD.js": {
-      "size": 807,
-      "isTask": true,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "origins": [
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityMockProvider_component_MiPVFWJLcMo.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityMockProvider_component_goto_PmWjL2RrvZM.js"
-      ],
-      "symbols": [
-        "s_PmWjL2RrvZM"
-      ]
-    },
-    "q-Bn5g5RhM.js": {
-      "size": 331,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "dynamicImports": [
-        "q-DcN4phJ_.js"
-      ],
-      "origins": [
-        "src/routes/index.tsx"
       ]
     },
     "q-BNPJXT0q.js": {
@@ -462,142 +410,87 @@
         "s_26Zk9LevwR4"
       ]
     },
-    "q-BNZ8nKLA.js": {
-      "size": 112,
+    "q-C3fgDybS.js": {
+      "size": 807,
+      "isTask": true,
       "imports": [
-        "q-BhPduiTD.js",
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_MiPVFWJLcMo"
-      ]
-    },
-    "q-BpDcAI1p.js": {
-      "size": 338,
-      "imports": [
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "origins": [
-        "src/components/background-page/background-page.tsx_BackgroundPage_component_X0lgn5dhhhc.js"
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityMockProvider_component_MiPVFWJLcMo.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityMockProvider_component_goto_PmWjL2RrvZM.js"
       ],
       "symbols": [
-        "s_X0lgn5dhhhc"
+        "s_PmWjL2RrvZM"
       ]
     },
-    "q-BpnE9-QD.js": {
+    "q-cbp1tv96.js": {
+      "size": 1684,
+      "isTask": true,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "origins": [
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_1raneLGffO8.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_handleClick_FdQ8zERN4uM.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_handlePrefetch_zPJUEsxZLIA.js"
+      ],
+      "symbols": [
+        "s_zPJUEsxZLIA"
+      ]
+    },
+    "q-CDH1NhkB.js": {
+      "size": 6912,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "dynamicImports": [
+        "q-CGtMt8jQ.js",
+        "q-DdxjOFNp.js"
+      ],
+      "origins": [
+        "@qwik-city-plan",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_goto_aww2BzpANGM.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_p1yCGpFL1xE.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_registerPreventNav_qGVD1Sz413o.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_useStyles_K4gvalEGCME.js",
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_useTask_Ysfvd0zsHZc.js"
+      ],
+      "symbols": [
+        "s_p1yCGpFL1xE"
+      ]
+    },
+    "q-CFL_fbSx.js": {
       "size": 112,
       "imports": [
-        "q-DSQ96vaC.js",
-        "q-DYNz6u9D.js",
+        "q-CDH1NhkB.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "symbols": [
         "s_K4gvalEGCME"
       ]
     },
-    "q-BR9jH5J7.js": {
-      "size": 493,
+    "q-CGtMt8jQ.js": {
+      "size": 331,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "dynamicImports": [
-        "q-B8HoOq0z.js"
+        "q-DcN4phJ_.js"
       ],
       "origins": [
-        "src/components/router-head/router-head.tsx",
-        "src/root.tsx_root_component_tntnak2DhJ8.js"
-      ],
-      "symbols": [
-        "s_tntnak2DhJ8"
+        "src/routes/index.tsx"
       ]
     },
-    "q-CAh5sU50.js": {
-      "size": 274,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "dynamicImports": [
-        "q-CyMFVI7-.js"
-      ],
-      "origins": [
-        "src/routes/layout.tsx"
-      ]
-    },
-    "q-Ckf0Lz1I.js": {
-      "size": 130,
-      "isTask": true,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-DYNz6u9D.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_qGVD1Sz413o"
-      ]
-    },
-    "q-CN05Qi30.js": {
-      "size": 135,
-      "isTask": true,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-DYNz6u9D.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_Ysfvd0zsHZc"
-      ]
-    },
-    "q-Cn0zAJVu.js": {
-      "size": 171,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "dynamicImports": [
-        "q-BR9jH5J7.js"
-      ],
-      "origins": [
-        "src/global.css",
-        "src/root.tsx"
-      ]
-    },
-    "q-CP_5OE63.js": {
-      "size": 112,
-      "imports": [
-        "q-DRkMdYdO.js",
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_1raneLGffO8"
-      ]
-    },
-    "q-CyMFVI7-.js": {
-      "size": 524,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "dynamicImports": [
-        "q-BcqF-p8l.js",
-        "q-BpDcAI1p.js"
-      ],
-      "origins": [
-        "src/components/background-page/background-page.tsx",
-        "src/components/background-window/background-window.tsx",
-        "src/routes/layout.tsx_layout_component_VKFlAWJuVm8.js"
-      ],
-      "symbols": [
-        "s_VKFlAWJuVm8"
-      ]
-    },
-    "q-D2Zn-4UO.js": {
+    "q-ChYA178G.js": {
       "size": 149,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "dynamicImports": [
@@ -607,18 +500,21 @@
         "@qwik-city-entries"
       ]
     },
-    "q-D6ZuQ01Z.js": {
-      "size": 1235,
-      "isTask": true,
+    "q-CMSiKgzL.js": {
+      "size": 493,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
+      "dynamicImports": [
+        "q-BKhI2EiG.js"
+      ],
       "origins": [
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_serverQrl_rpc_WfTOxT4IrdA.js"
+        "src/components/router-head/router-head.tsx",
+        "src/root.tsx_root_component_tntnak2DhJ8.js"
       ],
       "symbols": [
-        "s_WfTOxT4IrdA"
+        "s_tntnak2DhJ8"
       ]
     },
     "q-DcN4phJ_.js": {
@@ -633,10 +529,95 @@
         "s_B0lqk5IDDy4"
       ]
     },
-    "q-DJ9gDR7K.js": {
+    "q-DcsI9TLi.js": {
+      "size": 1235,
+      "isTask": true,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "origins": [
+        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_serverQrl_rpc_WfTOxT4IrdA.js"
+      ],
+      "symbols": [
+        "s_WfTOxT4IrdA"
+      ]
+    },
+    "q-DdxjOFNp.js": {
+      "size": 274,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "dynamicImports": [
+        "q-QLbuarBa.js"
+      ],
+      "origins": [
+        "src/routes/layout.tsx"
+      ]
+    },
+    "q-Djg4jmAc.js": {
+      "size": 112,
+      "imports": [
+        "q-C3fgDybS.js",
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_MiPVFWJLcMo"
+      ]
+    },
+    "q-DjmxJzL_.js": {
+      "size": 317,
+      "imports": [
+        "q-lNDDqrzM.js"
+      ],
+      "origins": [
+        "src/components/background-page/background-page.tsx_BackgroundPage_component_X0lgn5dhhhc.js"
+      ],
+      "symbols": [
+        "s_X0lgn5dhhhc"
+      ]
+    },
+    "q-DKUjv_k1.js": {
+      "size": 135,
+      "isTask": true,
+      "imports": [
+        "q-CDH1NhkB.js",
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_aww2BzpANGM"
+      ]
+    },
+    "q-DnAzCboA.js": {
+      "size": 111,
+      "isTask": true,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_xe8duyQ5aaU"
+      ]
+    },
+    "q-DNOsq1mW.js": {
+      "size": 135,
+      "isTask": true,
+      "imports": [
+        "q-CDH1NhkB.js",
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_Ysfvd0zsHZc"
+      ]
+    },
+    "q-DTutFjjo.js": {
       "size": 982,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "origins": [
@@ -646,53 +627,26 @@
         "s_ScE8eseirUA"
       ]
     },
-    "q-DOBGu2eg.js": {
-      "size": 135,
+    "q-Dyij7OZr.js": {
+      "size": 130,
       "isTask": true,
       "imports": [
-        "q-DSQ96vaC.js",
-        "q-DYNz6u9D.js",
+        "q-CDH1NhkB.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "symbols": [
-        "s_aww2BzpANGM"
+        "s_qGVD1Sz413o"
       ]
     },
-    "q-Dpw-Mq__.js": {
-      "size": 111,
-      "isTask": true,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "symbols": [
-        "s_xe8duyQ5aaU"
-      ]
-    },
-    "q-DRkMdYdO.js": {
-      "size": 1684,
-      "isTask": true,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "origins": [
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_1raneLGffO8.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_handleClick_FdQ8zERN4uM.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_Link_component_handlePrefetch_zPJUEsxZLIA.js"
-      ],
-      "symbols": [
-        "s_zPJUEsxZLIA"
-      ]
-    },
-    "q-DSQ96vaC.js": {
+    "q-DzX9OtiV.js": {
       "size": 10196,
       "imports": [
         "q-lNDDqrzM.js"
       ],
       "dynamicImports": [
-        "q-DJ9gDR7K.js",
-        "q-DYNz6u9D.js",
+        "q-CDH1NhkB.js",
+        "q-DTutFjjo.js",
         "q-F156cQaX.js"
       ],
       "origins": [
@@ -707,28 +661,6 @@
         "s_pWsmcogutG8"
       ]
     },
-    "q-DYNz6u9D.js": {
-      "size": 6912,
-      "imports": [
-        "q-DSQ96vaC.js",
-        "q-lNDDqrzM.js"
-      ],
-      "dynamicImports": [
-        "q-Bn5g5RhM.js",
-        "q-CAh5sU50.js"
-      ],
-      "origins": [
-        "@qwik-city-plan",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_goto_aww2BzpANGM.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_p1yCGpFL1xE.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_registerPreventNav_qGVD1Sz413o.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_useStyles_K4gvalEGCME.js",
-        "node_modules/@builder.io/qwik-city/lib/index.qwik.mjs_QwikCityProvider_component_useTask_Ysfvd0zsHZc.js"
-      ],
-      "symbols": [
-        "s_p1yCGpFL1xE"
-      ]
-    },
     "q-F156cQaX.js": {
       "size": 2297,
       "origins": [
@@ -736,6 +668,30 @@
       ],
       "symbols": [
         "s_9KRx0IOCHt8"
+      ]
+    },
+    "q-gt515s7g.js": {
+      "size": 135,
+      "isTask": true,
+      "imports": [
+        "q-cbp1tv96.js",
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_FdQ8zERN4uM"
+      ]
+    },
+    "q-HM7vuK-6.js": {
+      "size": 357,
+      "imports": [
+        "q-lNDDqrzM.js"
+      ],
+      "origins": [
+        "src/components/background-window/background-window.tsx_BackgroundWindow_component_WDwcpq0GviA.js"
+      ],
+      "symbols": [
+        "s_WDwcpq0GviA"
       ]
     },
     "q-lNDDqrzM.js": {
@@ -750,15 +706,59 @@
         "s_A5SCimyrjAE"
       ]
     },
-    "q-NgJJKfJB.js": {
+    "q-QLbuarBa.js": {
+      "size": 524,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "dynamicImports": [
+        "q-DjmxJzL_.js",
+        "q-HM7vuK-6.js"
+      ],
+      "origins": [
+        "src/components/background-page/background-page.tsx",
+        "src/components/background-window/background-window.tsx",
+        "src/routes/layout.tsx_layout_component_VKFlAWJuVm8.js"
+      ],
+      "symbols": [
+        "s_VKFlAWJuVm8"
+      ]
+    },
+    "q-X-B1-cto.js": {
       "size": 111,
       "isTask": true,
       "imports": [
-        "q-DSQ96vaC.js",
+        "q-DzX9OtiV.js",
         "q-lNDDqrzM.js"
       ],
       "symbols": [
         "s_zpHcJzYZ88E"
+      ]
+    },
+    "q-XlU8824k.js": {
+      "size": 112,
+      "imports": [
+        "q-cbp1tv96.js",
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "symbols": [
+        "s_1raneLGffO8"
+      ]
+    },
+    "q-YqxUS4dj.js": {
+      "size": 171,
+      "imports": [
+        "q-DzX9OtiV.js",
+        "q-lNDDqrzM.js"
+      ],
+      "dynamicImports": [
+        "q-CMSiKgzL.js"
+      ],
+      "origins": [
+        "src/global.css",
+        "src/root.tsx"
       ]
     }
   },
